templates/jaeger-query_template.yaml
---
# Source: jaeger-query/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: release-name-query
  labels:
    app.kubernetes.io/name: jaeger-query
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.41.0"
    app.kubernetes.io/component: tracing
    app.kubernetes.io/managed-by: helm
spec:
  selector:
    app: release-name-query
  ports:
    - name: query
      protocol: TCP
      port: 16686
      targetPort: query
    - name: admin
      protocol: SCTP
      port: 16687
      targetPort: admin
---
# Source: jaeger-query/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-query
  labels:
    app.kubernetes.io/name: jaeger-query
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.41.0"
    app.kubernetes.io/component: tracing
    app.kubernetes.io/managed-by: helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-name-query
  template:
    metadata:
      labels:
        app: release-name-query
        app.kubernetes.io/name: jaeger-query
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/version: "1.41.0"
        app.kubernetes.io/component: tracing
        app.kubernetes.io/managed-by: helm
    spec:
      containers:
        - name: release-name-query
          image: "jaegertracing/jaeger-query:1.41.0"
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 1024Mi
              cpu: 300m
            limits:
              memory: 1024Mi
              cpu: 300m
          ports:
            - name: query
              containerPort: 16686
            - name: admin
              containerPort: 16687
---
# Source: jaeger-query/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name
  labels:
    app.kubernetes.io/name: jaeger-query
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.41.0"
    app.kubernetes.io/component: tracing
    app.kubernetes.io/managed-by: helm
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  defaultBackend:
    service:
      name: release-name
      port:
        number: 16686
  rules:
    - host: jaeger.romanow-alex.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name
                port:
                  number: 16686
